# BDPRIN-projeto

./: README.md  pyproject.toml
config/: settings.py  urls.py
tabelas/: admin.py  models.py  serializers.py  views.py
tabelas/migrations/: 0001_initial.py  0002_consulta_medico.py  0003_receita.py  0004_receita_consulta_alter_consulta_data_hora_and_more.py  0005_medicamento.py  0006_paciente.py
